system/cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: gateway
spec:
  addresses:
    - type: "IPAddress"
      value: "192.168.3.50"
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.m15ty.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: m15ty-com-tls
      allowedRoutes:
        namespaces:
          from: All
